Main to 3.0; SF to 6.0; JDK 17
Initial Commit for Spring Framework 6.0/JDK 17

* Fix add-opens for java.util.zip; add distributionSha256Sum to gradle.properties.

Fix remaining errors of migration to SF-6.0

* Remove `lineSeparator` property for `NewlineAtEndOfFile` Checkstyle rule:
Windows checkouts files with a `crlf` line feed
* Add `-Dfile.encoding=UTF-8` jmvarg for Gradle: some source files use non-UTF symbols
* Upgrade to Kotlin `1.5.31`, JSON Path `2.6.0`, Junit `5.8.1`
* Use correct links for external JavaDocs
* Add `Xdoclint:syntax` to JavaDoc Gradle task to suppress JavaDoc warnings for classes
* Use `DuplicatesStrategy.EXCLUDE` for `prepareAsciidocBuild` task
* Align `api` task with SF style

Add `Xdoclint:syntax` to `api` Gradle task

Turns out `api` task generates fresh common JavaDocs,
so it emits the same warnings for missed docs in classes

Remove files restored by rebase

Fix test Java version

Fix build.gradle