@@ -2,7 +2,7 @@ buildscript {
 	ext.kotlinVersion = '1.5.31'
 	repositories {
 		mavenCentral()
-		maven { url 'https://plugins.gradle.org/m2' }
+		gradlePluginPortal()
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 	dependencies {
@@ -49,7 +49,7 @@ ext {
 	hamcrestVersion = '2.2'
 	hibernateValidationVersion = '6.2.0.Final'
 	jacksonBomVersion = '2.13.1'
-	jaywayJsonPathVersion = '2.4.0'
+	jaywayJsonPathVersion = '2.6.0'
 	junit4Version = '4.13.2'
 	junitJupiterVersion = '5.8.2'
 	log4jVersion = '2.17.1'
@@ -63,7 +63,7 @@ ext {
 	reactorVersion = '2020.0.14'
 	snappyVersion = '1.1.8.4'
 	springDataCommonsVersion = '2.6.0'
-	springVersion = project.hasProperty('springVersion') ? project.springVersion : '5.3.14'
+	springVersion = project.hasProperty('springVersion') ? project.springVersion : '6.0.0-SNAPSHOT'
 	springRetryVersion = '1.3.1'
 	zstdJniVersion = '1.5.0-2'
 }
@@ -110,9 +110,9 @@ allprojects {
 ext {
 	expandPlaceholders = '**/quick-tour.xml'
 	javadocLinks = [
-		'https://docs.oracle.com/javase/8/docs/api/',
-		'https://docs.oracle.com/javaee/7/api/',
-		'https://docs.spring.io/spring/docs/current/javadoc-api/'
+		'https://docs.oracle.com/en/java/javase/17/docs/api/',
+		'https://jakarta.ee/specifications/platform/9/apidocs/',
+		'https://docs.spring.io/spring-framework/docs/current/javadoc-api/'
 	] as String[]
 }
 
@@ -140,13 +140,13 @@ subprojects { subproject ->
 	}
 
 	compileJava {
-		sourceCompatibility = 1.8
-		targetCompatibility = 1.8
+		sourceCompatibility = 17
+		targetCompatibility = 17
 	}
 
 	compileTestJava {
-		sourceCompatibility = 11
-		targetCompatibility = 11
+		sourceCompatibility = 17
+		targetCompatibility = 17
 		options.encoding = 'UTF-8'
 	}
 
@@ -157,7 +157,7 @@ subprojects { subproject ->
 	}
 
 	jacoco {
-		toolVersion = '0.8.5'
+		toolVersion = '0.8.7'
 	}
 
 	// dependencies that are common across all java projects
@@ -245,7 +245,16 @@ subprojects { subproject ->
 		}
 	}
 
-    compileKotlin.dependsOn updateCopyrights
+	compileKotlin.dependsOn updateCopyrights
+
+	tasks.withType(JavaForkOptions) {
+		jvmArgs '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED'
+	}
+
+	tasks.withType(Javadoc) {
+		options.addBooleanOption('Xdoclint:syntax', true) // only check syntax with doclint
+		options.addBooleanOption('Werror', true) // fail build on Javadoc warnings
+	}
 
 	test {
 		maxHeapSize = '2g'
@@ -394,7 +403,7 @@ project('spring-rabbit') {
 
 	compileTestKotlin {
 		kotlinOptions {
-			jvmTarget = '11'
+			jvmTarget = '16'
 		}
 	}
 
@@ -553,12 +562,17 @@ task api(type: Javadoc) {
 	group = 'Documentation'
 	description = 'Generates aggregated Javadoc API documentation.'
 	title = "${rootProject.description} ${version} API"
-	options.memberLevel = org.gradle.external.javadoc.JavadocMemberLevel.PROTECTED
-	options.author = true
-	options.header = rootProject.description
-	options.overview = 'src/api/overview.html'
-	options.stylesheetFile = file('src/api/stylesheet.css')
-	options.links(rootProject.ext.javadocLinks)
+	options {
+		encoding = 'UTF-8'
+		memberLevel = JavadocMemberLevel.PROTECTED
+		author = true
+		header = rootProject.description
+		use = true
+		overview = 'src/api/overview.html'
+		splitIndex = true
+		links(project.ext.javadocLinks)
+		addBooleanOption('Xdoclint:syntax', true) // only check syntax with doclint
+	}
 
 	source subprojects.collect { project ->
 		project.sourceSets.main.allJava
